@@ -1,12 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-<plist version="1.0">
-<dict>
-	<key>IFPkgDescriptionDescription</key>
-	<string>A SIMD-accelerated JPEG codec that provides both the libjpeg and TurboJPEG APIs</string>
-	<key>IFPkgDescriptionTitle</key>
-	<string>@PACKAGE_NAME@</string>
-	<key>IFPkgDescriptionVersion</key>
-	<string>@VERSION@</string>
-</dict>
-</plist>
